# jax-sindy

./: .flake8  .pre-commit-config.yaml  README.rst  mypy.ini  pyproject.toml
jax_sindy/: differentiation.py
jax_sindy/differentiation/: differentiation.py
tests/: test_differentiation.py  test_jax_sindy.py
